added a 'start' script to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "4th node project on FCC. I plan to use google API, wish me luck!",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
